Fixing footer margin that was causing horizontal scrolling.

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -106,6 +106,7 @@ section {
   background: #222;
   padding: 20px 0;
   font-size: 12px;
+  margin-right: 0;
 }
 
 #mc_embed_signup form {
